--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -55,11 +55,11 @@
     }
   },
   "dependencies": {
+    "@applitools/core": "^1.1.6",
     "@applitools/eyes-api": "1.8.5",
     "@applitools/eyes-universal": "2.16.3",
     "@applitools/functional-commons": "1.6.0",
     "@applitools/logger": "1.1.26",
-    "@applitools/visual-grid-client": "15.14.1",
     "chalk": "3.0.0",
     "semver": "7.3.7",
     "uuid": "8.3.2",
@@ -72,7 +72,6 @@
     "@applitools/snaptdout": "1.0.1",
     "@applitools/test-server": "1.1.5",
     "@applitools/test-utils": "1.5.2",
-    "@applitools/types": "^1.5.19",
     "@applitools/utils": "1.3.12",
     "@types/node": "12",
     "@types/ws": "^8.2.2",
