--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -55,7 +55,7 @@
     }
   },
   "dependencies": {
-    "@applitools/core": "^1.1.6",
+    "@applitools/core": "1.1.6",
     "@applitools/eyes-api": "1.8.5",
     "@applitools/eyes-universal": "2.16.3",
     "@applitools/functional-commons": "1.6.0",
