fix cypress tests (#1133)
* fix typescript test

* check for empty test results in printTestResults

* adjust compiles with ts test

--- a/js/packages/eyes-cypress/tsconfig.json
+++ b/js/packages/eyes-cypress/tsconfig.json
@@ -21,7 +21,7 @@
       "transform": "@applitools/api-extractor",
       "afterDeclarations": true,
       "rootFile": "./index.ts",
-      "allowModules": ["@applitools/types", "cypress"],
+      "allowModules": ["cypress"],
     }]
   },
   "ts-node": {"transpileOnly": true},
