add shebang validation

--- a/js/packages/core/.eslintrc
+++ b/js/packages/core/.eslintrc
@@ -24,6 +24,11 @@
       "arrowParens": "avoid",
       "printWidth": 130
     }],
+    "node/shebang": ["error", {
+      "convertPath": {
+        "src/**/*.ts": ["^src/(.+?)\\.ts$", "dist/$1.js"]
+      }
+    }],
     "no-console": "error",
     "@typescript-eslint/no-unused-vars": [
       "error",
