Cypress chrome emulation (#1135)
* support chrome emulation with browser name

* update pending changes

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -67,7 +67,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fix support for chrome emulation when passing browser name
 "@applitools/eyes-storybook":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
