--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,23 +12,24 @@ Apollo SDK:
   feature:
     - Drop support for Android 9 and Android 10 specific devices
   bug-fix:
-    - 
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-playwright":
   feature:
     - Changed default value of `sendDom` from `true` to dynamically calculated
   bug-fix:
     - Fixed issue with ufg renders failing intermittently
     - Fixed error that was happening when test results were deleted
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -47,6 +48,7 @@ Apollo SDK:
   bug-fix:
     - Fixed issue with ufg renders failing intermittently
     - Fixed error that was happening when test results were deleted
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
@@ -63,6 +65,7 @@ Apollo SDK:
     - Fixed issue with logs not being saved/written
     - Fixed issue with ufg renders failing intermittently
     - Fixed error that was happening when test results were deleted
+    - Fixed bug that caused `extractText` to throw, due to fractional size of the target region
 "@applitools/eyes-cypress":
   feature:
     - 
